Fixed the spacing and scale of the elements of the essay page after making it responsive

--- a/css/essay-style.css
+++ b/css/essay-style.css
@@ -141,18 +141,28 @@ p.header-title{
     padding: 5%;
     border-radius: 25px;
 }
-/* 
-.essay-entry h1{
+
+.essay-entry h1 {
     text-decoration: none;
+    color: black;
+    margin: 1%;
+}
+
+.essay-entry a{
+    text-decoration: none;
+    padding-left: 3%;
 }
 
 .essay-entry p{
     margin-left: 3%;
+    margin-right: 3%;
 }
 
 p.subtitle{
+    margin: 0;
     margin-left: 7%;
-} */
+    margin-right: 3%;
+}
 
 
 
